[package]
name = "learning-memo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lmemo"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.40.1", features = ["chrono"] }
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
ureq = "3.3.0"
regex = "1.12.4"
clap_complete = "4.6.5"
dirs = "6.0.0"
open = "5.3.6"
